<resources>
    <string name="app_name">AndroidCalculatorDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="display_mathematics">表示式</string>
    <string name="display_result">結果</string>

    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_zero">0</string>

    <string name="btn_addition">+</string>
    <string name="btn_subtraction">-</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_division">/</string>

    <string name="btn_clear">C</string>
    <string name="btn_enter">=</string>
    <string name="btn_dot">.</string>

    <string name="about_me">About Me</string>
    <string name="quit">Quit</string>
    <string name="about_msg">EazyCalcu by Ken Guerrilla</string>



</resources>
