<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CalculatorView"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/layout_background_black"

    >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        >

        <TextView
            android:id="@+id/textView_process"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_word_green"
            android:textSize="@dimen/text_output_size"

            android:layout_margin="@dimen/default_margin"

            android:gravity="end|center_vertical"
            android:background="@drawable/view_styles_btn"

            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:padding="6dp"
        >

        <TextView

            android:id="@+id/textView_result"
            android:layout_width="275dp"
            android:layout_height="75dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:textSize="@dimen/text_output_size"
            android:textColor="@color/text_word_green"

            android:layout_margin="@dimen/default_margin"
            android:gravity="end|center_vertical"

            android:background="@drawable/view_styles_btn"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"


            />

        <TextView
            android:id="@+id/view_btn_clear"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_clear"
            android:textColor="@color/text_word_green"
            android:textSize="@dimen/text_btn_size"

            android:layout_margin="@dimen/default_margin"
            android:gravity="center|center_vertical"


            android:background="@drawable/view_styles_btn"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"


            />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:stretchColumns="0,1,2,3"
        android:gravity="center|center_vertical"

        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/view_btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_one"
                android:clickable="true"

                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"

                 />


            <TextView
                android:id="@+id/view_btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_two"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"

                 />

            <TextView
                android:id="@+id/view_btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_three"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"

                />

            <TextView
                android:id="@+id/view_btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_addition"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"


                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/view_btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_four"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"


                />

            <TextView
                android:id="@+id/view_btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_five"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"

                />

            <TextView
                android:id="@+id/view_btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_six"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"

                />

            <TextView
                android:id="@+id/view_btn_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_subtraction"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"


                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/view_btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_seven"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"


                />

            <TextView
                android:id="@+id/view_btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_eight"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"

                />

            <TextView
                android:id="@+id/view_btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_nine"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"


                />

            <TextView
                android:id="@+id/view_btn_mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_multiplication"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"



                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/view_btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_dot"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"


                />

            <TextView
                android:id="@+id/view_btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_zero"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"

                />

            <TextView
                android:id="@+id/view_btn_equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_enter"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"


                />

            <TextView
                android:id="@+id/view_btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/view_styles"
                android:gravity="center|center_vertical"

                android:text="@string/btn_division"
                android:clickable="true"
                android:textColor="@color/text_word_green"
                android:textSize="@dimen/text_btn_size"



                />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="@color/layout_background_black"

        >

    </LinearLayout>


</LinearLayout>
